--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
     <label class="toggle-label"><input type="radio" name="mode" value="code" /> 🔢 Enter Question Code</label>
   </div>
 
-  <div id="imageMode"><input type="file" id="fileInput" accept="image/*" capture="environment" /></div>
+  <div id="imageMode"><input type="file" id="fileInput" accept="image/*" /></div>
   <div id="textMode" class="hidden"><textarea id="manualQuestion" placeholder="Type or paste your question here..."></textarea><br /><button id="solveManual">🔍 Solve</button></div>
   <div id="codeMode" class="hidden"><input type="text" id="questionCode" placeholder="Enter question code..." /><br /><button id="solveCode">🔍 Get Answer</button></div>
 
