--- a/public/index.html
+++ b/public/index.html
@@ -32,31 +32,89 @@
     .mode-toggle { margin: 15px 0; }
     .toggle-label { margin: 0 10px; font-weight: bold; cursor: pointer; }
     .hidden { display: none; }
+
     input[type="file"], textarea, input[type="text"] {
-      font-size: 1rem; padding: 10px; margin: 10px 0; width: 100%; max-width: 400px;
+      font-size: 1rem;
+      padding: 10px;
+      margin: 10px 0;
+      width: 100%;
+      max-width: 400px;
     }
+
     textarea { height: 100px; resize: vertical; }
-    button { margin-top: 10px; padding: 12px 20px; background: #3498db; color: white; font-size: 1rem; border: none; border-radius: 8px; cursor: pointer; }
-    button:hover { background: #2c80b9; }
+
+    button, label.btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 12px 20px;
+      background: #3498db;
+      color: white;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    button:hover, label.btn:hover { background: #2c80b9; }
 
     .solution-box {
-      background: #fff; border-radius: 10px; padding: 15px; margin-top: 15px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.06); text-align: left; font-size: 1rem; line-height: 1.5;
+      background: #fff;
+      border-radius: 10px;
+      padding: 15px;
+      margin-top: 15px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+      text-align: left;
+      font-size: 1rem;
+      line-height: 1.5;
     }
 
     .solution-step-list { list-style: none; padding-left: 0; margin-left: 0; }
     .solution-step-list li {
-      background: #f0f4f8; padding: 10px 12px; margin-bottom: 8px; border-radius: 6px; line-height: 1.5;
+      background: #f0f4f8;
+      padding: 10px 12px;
+      margin-bottom: 8px;
+      border-radius: 6px;
+      line-height: 1.5;
       transition: box-shadow 0.25s ease, transform 0.2s ease;
     }
     .solution-step-list li.step-numbered { background: #fff3cd; font-weight: 600; }
-    .solution-step-list li.step-numbered:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.15); transform: translateY(-2px); }
+    .solution-step-list li.step-numbered:hover {
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      transform: translateY(-2px);
+    }
 
-    /* old yellow highlight removed; Step X is blue/bold via inline markup */
-
-    #cropModal { display: none; position: fixed; z-index: 9999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); justify-content: center; align-items: center; flex-direction: column; padding: 15px; box-sizing: border-box; }
-    #cropImage { max-width: 100%; max-height: 80%; border-radius: 6px; object-fit: contain; }
-    .modal-btn { position: absolute; bottom: 20px; padding: 12px 20px; background: #3498db; color: white; font-size: 1rem; border: none; border-radius: 8px; cursor: pointer; }
+    #cropModal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 15px;
+      box-sizing: border-box;
+    }
+    #cropImage {
+      max-width: 100%;
+      max-height: 80%;
+      border-radius: 6px;
+      object-fit: contain;
+    }
+    .modal-btn {
+      position: absolute;
+      bottom: 20px;
+      padding: 12px 20px;
+      background: #3498db;
+      color: white;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
     .modal-btn:hover { background: #2c80b9; }
     #cancelCrop { left: 20px; background: #e74c3c; }
     #confirmCrop { right: 20px; }
@@ -77,9 +135,25 @@
     <label class="toggle-label"><input type="radio" name="mode" value="code" /> 🔢 Enter Question Code</label>
   </div>
 
-  <div id="imageMode"><input type="file" id="fileInput" accept="image/*" /></div>
-  <div id="textMode" class="hidden"><textarea id="manualQuestion" placeholder="Type or paste your question here..."></textarea><br /><button id="solveManual">🔍 Solve</button></div>
-  <div id="codeMode" class="hidden"><input type="text" id="questionCode" placeholder="Enter question code..." /><br /><button id="solveCode">🔍 Get Answer</button></div>
+  <!-- ✅ Dual camera/gallery upload setup -->
+  <div id="imageMode">
+    <div class="flex gap-2">
+      <label for="cameraInput" class="btn">📷 Take Photo</label>
+      <label for="galleryInput" class="btn">🖼️ Upload from Gallery</label>
+    </div>
+    <input type="file" id="cameraInput" accept="image/*" capture="environment" hidden />
+    <input type="file" id="galleryInput" accept="image/*" hidden />
+  </div>
+
+  <div id="textMode" class="hidden">
+    <textarea id="manualQuestion" placeholder="Type or paste your question here..."></textarea><br />
+    <button id="solveManual">🔍 Solve</button>
+  </div>
+
+  <div id="codeMode" class="hidden">
+    <input type="text" id="questionCode" placeholder="Enter question code..." /><br />
+    <button id="solveCode">🔍 Get Answer</button>
+  </div>
 
   <div id="cropModal">
     <img id="cropImage" alt="To Crop" />
@@ -92,7 +166,9 @@
     <p id="progressText">Processing...</p>
   </div>
 
-  <div class="solution-box" id="result">Select a mode and provide your question to see the solution.</div>
+  <div class="solution-box" id="result">
+    Select a mode and provide your question to see the solution.
+  </div>
 
   <script>
     let cropper = null, questionBanks = {}, fuseBanks = {};
@@ -111,201 +187,120 @@
           questionBanks[subj] = data;
           fuseBanks[subj] = new Fuse(data, { keys: ["question.text"], threshold: 0.4 });
         })
-        .catch(()=>{ /* ignore loading errors for now */ });
+        .catch(()=>{});
     }
 
     function renderQA(item, subj) {
       let html = `<b>Subject:</b> ${subj}<br>`;
       if (item.code) html += `<p><b>Code:</b> <span class="small">${item.code}</span></p>`;
-
-      const questionText = item.question?.text || "❌ Question not found";
-      html += `<p><b>Question:</b> <span class="mathjax">${questionText}</span></p>`;
-
-      const solutionText = item.solution?.text || "❌ Solution not found";
-      html += `<p><b>Solution:</b> <span class="mathjax">${solutionText}</span></p>`;
-
-      if (item.solution_steps && item.solution_steps.length) {
+      const qText = item.question?.text || "❌ Question not found";
+      html += `<p><b>Question:</b> <span class="mathjax">${qText}</span></p>`;
+      const sText = item.solution?.text || "❌ Solution not found";
+      html += `<p><b>Solution:</b> <span class="mathjax">${sText}</span></p>`;
+      if (item.solution_steps?.length) {
         html += `<p><b>Solution Steps:</b></p><ul class="solution-step-list">`;
-        item.solution_steps.forEach(step => {
-          const isNumbered = /Step\s*\d+/i.test(step);
-          const className = isNumbered ? "step-numbered" : "";
-          // make Step X blue and bold
+        item.solution_steps.forEach(step=>{
           const stepHtml = step.replace(/(Step\s*\d+[:.]?)/gi, '<b style="color:#007bff">$1</b>');
-          html += `<li class="${className}"><span class="mathjax">${stepHtml}</span></li>`;
+          html += `<li><span class="mathjax">${stepHtml}</span></li>`;
         });
         html += `</ul>`;
       }
-
-      // safe delayed typeset for DB results
-      setTimeout(()=>{ if (window.MathJax && MathJax.typesetPromise) MathJax.typesetPromise([document.getElementById("result")]); }, 60);
+      setTimeout(()=>{ MathJax.typesetPromise([document.getElementById("result")]); },60);
       return html;
     }
 
-    // streaming-safe searchSolution
-    async function searchSolution(text) {
-      // clear any existing ephemeral streaming area (if present)
+    async function searchSolution(text){
       const existingStream = document.getElementById("streamOutput");
-      if (existingStream) existingStream.innerHTML = "";
-
-      // 1: exact DB match
-      for (let subj in questionBanks) {
-        const exact = questionBanks[subj]?.find(q => q.question.text.trim().toLowerCase() === text.trim().toLowerCase());
-        if (exact) {
-          const html = renderQA(exact, subj);
-          document.getElementById("result").innerHTML = html;
-          if (window.MathJax && MathJax.typesetPromise) await MathJax.typesetPromise([document.getElementById("result")]);
-          return;
-        }
+      if(existingStream) existingStream.innerHTML="";
+      for(let subj in questionBanks){
+        const exact = questionBanks[subj]?.find(q=>q.question.text.trim().toLowerCase()===text.trim().toLowerCase());
+        if(exact){document.getElementById("result").innerHTML=renderQA(exact,subj);return;}
       }
-
-      // 2: fuzzy DB match
-      for (let subj in fuseBanks) {
-        const res = fuseBanks[subj].search(text);
-        if (res.length && res[0].score < 0.4) {
-          const html = renderQA(res[0].item, subj);
-          document.getElementById("result").innerHTML = html;
-          if (window.MathJax && MathJax.typesetPromise) await MathJax.typesetPromise([document.getElementById("result")]);
-          return;
-        }
+      for(let subj in fuseBanks){
+        const res=fuseBanks[subj].search(text);
+        if(res.length&&res[0].score<0.4){document.getElementById("result").innerHTML=renderQA(res[0].item,subj);return;}
       }
-
-      // 3: fallback to AI streaming
-      const resp = await fetch("https://ai-question-and-its-solution-4kxy.onrender.com/ask-ai", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ question: text })
-      });
-      if (!resp.ok) {
-        const err = "❌ Error fetching AI response.";
-        return err;
-      }
-
-      // create a dedicated container so we never overwrite extracted text
-      const streamContainer = document.createElement("div");
-      streamContainer.innerHTML = "<hr><b>G10EP AI Answer (streaming):</b><br><div id='streamOutput' style='white-space:pre-wrap;'></div>";
+      const resp=await fetch("https://ai-question-and-its-solution-4kxy.onrender.com/ask-ai",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({question:text})});
+      if(!resp.ok){document.getElementById("result").innerHTML="❌ Error fetching AI response.";return;}
+      const streamContainer=document.createElement("div");
+      streamContainer.innerHTML="<hr><b>G10EP AI Answer (streaming):</b><br><div id='streamOutput' style='white-space:pre-wrap;'></div>";
       document.getElementById("result").appendChild(streamContainer);
-
-      const streamDivNew = streamContainer.querySelector("#streamOutput");
-      const reader = resp.body.getReader();
-      const decoder = new TextDecoder();
-      let fullText = "";
-
-      while (true) {
-        const { done, value } = await reader.read();
-        if (done) break;
-        const chunk = decoder.decode(value, { stream: true });
-        fullText += chunk;
-
-        // replace Step X consistently (blue + bold), then do simple formatting
-        const htmlChunk = fullText
-          .replace(/(Step\s*\d+[:.]?)/gi, '<b style="color:#007bff">$1</b>')
-          .replaceAll("**", "")
-          .replaceAll("-", "<br>•")
-          .replaceAll("\r\n", "\n")
-          .replaceAll("\n", "<br>");
-
-        streamDivNew.innerHTML = htmlChunk;
-
-        // debounce typesetting so MathJax only runs occasionally
+      const streamDiv=streamContainer.querySelector("#streamOutput");
+      const reader=resp.body.getReader();const decoder=new TextDecoder();let full="";
+      while(true){
+        const {done,value}=await reader.read();if(done)break;
+        const chunk=decoder.decode(value,{stream:true});full+=chunk;
+        streamDiv.innerHTML=full.replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>')
+          .replaceAll("**","").replaceAll("-","<br>•").replaceAll("\n","<br>");
         clearTimeout(window._mjTimer);
-        window._mjTimer = setTimeout(() => {
-          if (window.MathJax && MathJax.typesetPromise) MathJax.typesetPromise([streamDivNew]).catch(()=>{});
-        }, 180);
+        window._mjTimer=setTimeout(()=>MathJax.typesetPromise([streamDiv]),180);
       }
-
-      // final typeset on the completed streaming container
-      if (window.MathJax && MathJax.typesetPromise) {
-        try { await MathJax.typesetPromise([streamDivNew]); } catch(e){ /* ignore math errors */ }
-      }
-      return;
+      await MathJax.typesetPromise([streamDiv]);
     }
 
-    function searchByCode(code) {
-      for (let subj in questionBanks) {
-        const q = questionBanks[subj]?.find(x => String(x.code).toUpperCase() === code.toUpperCase());
-        if (q) return renderQA(q, subj);
-      }
-      return "❌ No question found with this code.";
-    }
+    const cropModal=document.getElementById("cropModal");
+    const cropImage=document.getElementById("cropImage");
+    const confirmCrop=document.getElementById("confirmCrop");
+    const cancelCrop=document.getElementById("cancelCrop");
+    const resultBox=document.getElementById("result");
+    const progressContainer=document.getElementById("progressContainer");
+    const progressBar=document.getElementById("progressBar");
+    const progressText=document.getElementById("progressText");
+
+    const handleFile=(e)=>{
+      const file=e.target.files[0];if(!file)return;
+      cropImage.src=URL.createObjectURL(file);
+      cropModal.style.display="flex";
+      if(cropper)cropper.destroy();
+      cropper=new Cropper(cropImage,{viewMode:1});
+    };
+    document.getElementById("cameraInput").addEventListener("change",handleFile);
+    document.getElementById("galleryInput").addEventListener("change",handleFile);
+
+    cancelCrop.onclick=()=>{cropModal.style.display="none";cropper?.destroy();cropper=null;};
+    confirmCrop.onclick=async()=>{
+      if(!cropper)return;
+      cropModal.style.display="none";
+      const canvas=cropper.getCroppedCanvas();
+      cropper.destroy();cropper=null;
+      progressContainer.style.display="block";
+      progressBar.style.width="10%";
+      progressText.textContent="🧠 Reading question from image...";
+      const blob=await new Promise(res=>canvas.toBlob(res,"image/png"));
+      const {data:{text}}=await Tesseract.recognize(blob,"eng",{logger:(m)=>{if(m.status==="recognizing text"){progressBar.style.width=10+m.progress*70+"%";}}});
+      progressBar.style.width="85%";
+      progressText.textContent="🔍 Searching or generating answer...";
+      resultBox.innerHTML=`<div id="extracted"><b>Extracted Text:</b><br>${text.replace(/\n/g,"<br>")}</div><div id="answerArea"></div>`;
+      await searchSolution(text);
+      progressBar.style.width="100%";
+      progressContainer.style.display="none";
+      MathJax.typesetPromise([document.getElementById("result")]);
+    };
 
     document.querySelectorAll('input[name="mode"]').forEach(r=>{
-      r.addEventListener("change", e=>{
-        document.getElementById("imageMode").classList.toggle("hidden", e.target.value !== "image");
-        document.getElementById("textMode").classList.toggle("hidden", e.target.value !== "text");
-        document.getElementById("codeMode").classList.toggle("hidden", e.target.value !== "code");
+      r.addEventListener("change",e=>{
+        document.getElementById("imageMode").classList.toggle("hidden",e.target.value!=="image");
+        document.getElementById("textMode").classList.toggle("hidden",e.target.value!=="text");
+        document.getElementById("codeMode").classList.toggle("hidden",e.target.value!=="code");
       });
     });
 
-    const fileInput = document.getElementById("fileInput");
-    const cropModal = document.getElementById("cropModal");
-    const cropImage = document.getElementById("cropImage");
-    const confirmCrop = document.getElementById("confirmCrop");
-    const cancelCrop = document.getElementById("cancelCrop");
-    const resultBox = document.getElementById("result");
-    const progressContainer = document.getElementById("progressContainer");
-    const progressBar = document.getElementById("progressBar");
-    const progressText = document.getElementById("progressText");
-
-    fileInput.addEventListener("change", (e)=>{
-      const file = e.target.files[0];
-      if (!file) return;
-      cropImage.src = URL.createObjectURL(file);
-      cropModal.style.display = "flex";
-      if (cropper) cropper.destroy();
-      cropper = new Cropper(cropImage, { viewMode: 1 });
-    });
-
-    cancelCrop.onclick = () => {
-      cropModal.style.display = "none";
-      cropper?.destroy(); cropper = null;
-    };
-
-    confirmCrop.onclick = async () => {
-      if (!cropper) return;
-      cropModal.style.display = "none";
-      const canvas = cropper.getCroppedCanvas();
-      cropper.destroy(); cropper = null;
-
-      progressContainer.style.display = "block";
-      progressBar.style.width = "10%";
-      progressText.textContent = "🧠 Reading question from image...";
-
-      const blob = await new Promise(res => canvas.toBlob(res, "image/png"));
-      const { data: { text } } = await Tesseract.recognize(blob, "eng", {
-        logger: (m) => {
-          if (m.status === "recognizing text") {
-            progressBar.style.width = 10 + m.progress * 70 + "%";
-          }
-        }
-      });
-
-      progressBar.style.width = "85%";
-      progressText.textContent = "🔍 Searching or generating answer...";
-
-      // Put extracted text in its own area so streaming cannot be overwritten
-      resultBox.innerHTML = `<div id="extracted"><b>Extracted Text:</b><br>${text.replace(/\n/g, "<br>")}</div><div id="answerArea"></div>`;
-
-      const answerArea = document.getElementById("answerArea");
-      await searchSolution(text); // this appends streaming result into resultBox
-      progressBar.style.width = "100%";
-      progressContainer.style.display = "none";
-      // final MathJax call for whole result area
-      if (window.MathJax && MathJax.typesetPromise) MathJax.typesetPromise([document.getElementById("result")]).catch(()=>{});
-    };
-
-    document.getElementById("solveManual").addEventListener("click", async () => {
-      const text = document.getElementById("manualQuestion").value.trim();
-      if (!text) return alert("Please enter a question.");
-      resultBox.innerHTML = "⏳ Solving...";
+    document.getElementById("solveManual").onclick=async()=>{
+      const text=document.getElementById("manualQuestion").value.trim();
+      if(!text)return alert("Please enter a question.");
+      resultBox.innerHTML="⏳ Solving...";
       await searchSolution(text);
-      if (window.MathJax && MathJax.typesetPromise) MathJax.typesetPromise([document.getElementById("result")]).catch(()=>{});
-    });
+    };
 
-    document.getElementById("solveCode").addEventListener("click", () => {
-      const code = document.getElementById("questionCode").value.trim();
-      resultBox.innerHTML = searchByCode(code);
-      if (window.MathJax && MathJax.typesetPromise) MathJax.typesetPromise([document.getElementById("result")]).catch(()=>{});
-    });
+    document.getElementById("solveCode").onclick=()=>{
+      const code=document.getElementById("questionCode").value.trim();
+      resultBox.innerHTML="Searching...";
+      for(let subj in questionBanks){
+        const q=questionBanks[subj]?.find(x=>String(x.code).toUpperCase()===code.toUpperCase());
+        if(q){resultBox.innerHTML=renderQA(q,subj);return;}
+      }
+      resultBox.innerHTML="❌ No question found with this code.";
+    };
   </script>
 </body>
 </html>
